refactor:tools and model provider
